--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,6 +1,6 @@
 name: mlops-exaple-tensorflow-regression
 on: [push]
-permissions: read-all|write-all
+permissions: write-all
 jobs:
   run:
     runs-on: [ubuntu-latest]
