--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -3,7 +3,7 @@ on: [push]
 permissions: write-all
 jobs:
   run:
-    runs-on: [ubuntu-latest]
+    runs-on: [self-hosted]
     container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v3
