--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -4,7 +4,7 @@ permissions: write-all
 jobs:
   run:
     runs-on: [self-hosted]
-    container: docker://ghcr.io/iterative/cml:0-dvc2-base1
+ #   container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v3
       - name: 'Train my model'
